--- a/.github/workflows/java-app.yml
+++ b/.github/workflows/java-app.yml
@@ -29,6 +29,9 @@ jobs:
         cache: maven
     - name: SonarCloud Scan
       uses: SonarSource/sonarcloud-github-action@v1.8
+      env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN_SECRET }}
     - name: Build and analyze
       env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
