--- a/.github/workflows/java-app.yml
+++ b/.github/workflows/java-app.yml
@@ -27,11 +27,18 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
         cache: maven
-    - name: SonarCloud Scan
-      uses: SonarSource/sonarcloud-github-action@v1.8
-      env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN_SECRET }}
+    - name: Cache SonarCloud packages
+      uses: actions/cache@v3
+      with:
+        path: ~/.sonar/cache
+        key: ${{ runner.os }}-sonar
+        restore-keys: ${{ runner.os }}-sonar
+    - name: Cache Maven packages
+      uses: actions/cache@v3
+      with:
+        path: ~/.m2
+        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+        restore-keys: ${{ runner.os }}-m2
     - name: Build and analyze
       env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
