--- a/.github/workflows/java-app.yml
+++ b/.github/workflows/java-app.yml
@@ -39,6 +39,8 @@ jobs:
         path: ~/.m2
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
         restore-keys: ${{ runner.os }}-m2
+    - name: Build the Docker image
+      run: docker-compose build
     - name: up mysql container runs
       run: docker-compose up -d
     - name: Build and analyze
