--- a/.github/workflows/java-app.yml
+++ b/.github/workflows/java-app.yml
@@ -43,6 +43,10 @@ jobs:
       run: docker-compose build
     - name: Up mysql container runs
       run: docker-compose up -d
+    - name: Sleep for 20 seconds
+      uses: jakejarvis/wait-action@master
+      with:
+        time: '20s'
     - name: Build and analyze
       env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
